#2 - Protobuf editor lexer

--- a/protobuf-netbeans-plugin-suite/nbproject/project.properties
+++ b/protobuf-netbeans-plugin-suite/nbproject/project.properties
@@ -5,7 +5,11 @@ auxiliary.org-netbeans-modules-apisupport-installer.os-solaris=false
 auxiliary.org-netbeans-modules-apisupport-installer.os-windows=false
 auxiliary.org-netbeans-modules-apisupport-installer.pack200-enabled=false
 modules=\
-    ${project.com.marcowillemart.netbeans.protobuf}
+    ${project.com.marcowillemart.netbeans.protobuf}:\
+    ${project.org.antlr}:\
+    ${project.com.marcowillemart.protobuf}
 project.com.marcowillemart.netbeans.protobuf=protobuf-editor
 keystore=nbproject/private/keystore
 nbm_alias=myself
+project.com.marcowillemart.protobuf=protobuf-parser
+project.org.antlr=antlr-runtime
