--- a/protobuf-netbeans-plugin-suite/protobuf-editor/src/com/marcowillemart/protobuf/editor/Bundle.properties
+++ b/protobuf-netbeans-plugin-suite/protobuf-editor/src/com/marcowillemart/protobuf/editor/Bundle.properties
@@ -3,3 +3,17 @@ OpenIDE-Module-Long-Description=\
     Support for Google Protocol Buffers files (syntax coloring, code completion, template).
 OpenIDE-Module-Name=Protobuf Editor
 OpenIDE-Module-Short-Description=*.proto files support (syntax coloring, code completion, template)
+
+application/x-protobuf=Protobuf
+character=Character
+errors=Error
+identifier=Identifier
+keyword=Keyword
+literal=Literal
+comment=Comment
+number=Number
+operator=Operator
+string=String
+separator=Separator
+whitespace=Whitespace
+method-declaration=Method Declaration
