--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -8,9 +8,11 @@ auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbpr
 modules=\
     ${project.com.marcowillemart.netbeans.protobuf}:\
     ${project.org.antlr}:\
-    ${project.com.marcowillemart.protobuf}
+    ${project.com.marcowillemart.protobuf}:\
+    ${project.org.slf4j}
 project.com.marcowillemart.netbeans.protobuf=protobuf-editor
 keystore=nbproject/private/keystore
 nbm_alias=myself
 project.com.marcowillemart.protobuf=protobuf-parser
 project.org.antlr=antlr-runtime
+project.org.slf4j=slf4j
