--- a/protobuf-editor/nbproject/project.properties
+++ b/protobuf-editor/nbproject/project.properties
@@ -1,5 +1,29 @@
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
+
+file.reference.antlr-runtime-4.5.3.jar=release/modules/ext/antlr-runtime-4.5.3.jar
+file.reference.slf4j-api-1.7.21.jar=release/modules/ext/slf4j-api-1.7.21.jar
+file.reference.slf4j-jdk14-1.7.21.jar=release/modules/ext/slf4j-jdk14-1.7.21.jar
+
 javac.source=1.7
 javac.compilerargs=-Xlint -Xlint:-serial
-license.file=../GPL-3.0
+
+license.file=GPL-3.0
+
 nbm.homepage=https://github.com/mwillema/protobuf-netbeans-plugin
 nbm.module.author=Marco Willemart
+
+# ANTLR 4 parameters
+# src.grammar.dir is set in the IDE's project properties file as a result
+# of naming the grammar sub-directory as a source.
+antlr.generator.src.dir=grammar
+# NetBeans module does not allow the compilation of sources outside src directory
+antlr.generator.dest.dir=src/com/marcowillemart/protobuf/parser
+antlr.generator.classname=org.antlr.v4.Tool
+antlr.generator.options=
+antlr.generator.classpath=lib/antlr-4.5.3-complete.jar
+antlr.runtime.classpath=${file.reference.antlr-runtime-4.5.3.jar}
+antlr.generated.package=com.marcowillemart.protobuf.parser
+
+# Keystore parameters
+keystore=nbproject/private/keystore
+nbm_alias=mwillema
