--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,4 @@
-auxiliary.org-netbeans-modules-apisupport-installer.license-file=GPL-3.0
+auxiliary.org-netbeans-modules-apisupport-installer.license-type=no
 auxiliary.org-netbeans-modules-apisupport-installer.os-linux=false
 auxiliary.org-netbeans-modules-apisupport-installer.os-macosx=false
 auxiliary.org-netbeans-modules-apisupport-installer.os-solaris=false
@@ -6,13 +6,5 @@ auxiliary.org-netbeans-modules-apisupport-installer.os-windows=false
 auxiliary.org-netbeans-modules-apisupport-installer.pack200-enabled=false
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 modules=\
-    ${project.com.marcowillemart.netbeans.protobuf}:\
-    ${project.org.antlr}:\
-    ${project.com.marcowillemart.protobuf}:\
-    ${project.org.slf4j}
+    ${project.com.marcowillemart.netbeans.protobuf}
 project.com.marcowillemart.netbeans.protobuf=protobuf-editor
-keystore=nbproject/private/keystore
-nbm_alias=myself
-project.com.marcowillemart.protobuf=protobuf-parser
-project.org.antlr=antlr-runtime
-project.org.slf4j=slf4j
